--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-card-flip": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
